# spatial_temporal_learning-release

./: .travis.yml  CHANGELOG.rst  CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
config/: world.yaml
debian/: changelog  control  gbp.conf  rules
include/world_item_observer/: ItemObserver.h
include/world_item_search/: OfflineItemSearcher.h
include/worldlib/geometry/: Pose.h  Position.h
include/worldlib/model/: PersistenceModel.h  PlacementModel.h
include/worldlib/remote/: Node.h
include/worldlib/world/: Object.h  Room.h  World.h
launch/: world_item_observer.launch
nodes/: world_item_observer.cpp
rpm/: ros-indigo-spatial-temporal-learning.spec  ros-indigo-world-item-observer.spec  ros-indigo-worldlib.spec  ros-jade-spatial-temporal-learning.spec  ros-jade-world-item-observer.spec  ros-jade-world-item-search.spec  ros-jade-worldlib.spec  template.spec
spatial_temporal_learning/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/: ItemObserver.cpp
src/geometry/: Orientation.cpp  Position.cpp
src/model/: TaskModel.cpp
src/remote/: SpatialWorldObservation.cpp
src/world/: Placement.cpp  PlacementSurface.cpp  World.cpp
world_item_observer/: CHANGELOG.rst  CMakeLists.txt  package.xml
world_item_observer/include/world_item_observer/: ItemObserver.h
world_item_observer/launch/: world_item_observer.launch
world_item_observer/src/: ItemObserver.cpp
world_item_search/: CHANGELOG.rst  CMakeLists.txt  package.xml
world_item_search/geolife/: LICENSE  README.md  download.bash
world_item_search/include/world_item_search/: GeoLifeEntry.h
world_item_search/launch/: offline_item_search.launch
world_item_search/nodes/: offline_item_search.cpp
world_item_search/src/: GeoLifeEntry.cpp  OfflineItemSearcher.cpp
worldlib/: CHANGELOG.rst  CMakeLists.txt  package.xml
worldlib/include/worldlib/: worldlib.h
worldlib/include/worldlib/geometry/: Orientation.h
worldlib/include/worldlib/model/: TaskModel.h
worldlib/include/worldlib/remote/: Client.h  HttpClient.h  InteractiveWorldModelClient.h  SpatialWorldClient.h  SpatialWorldObservation.h  SqlClient.h  SqlEntity.h
worldlib/include/worldlib/world/: Item.h  Observation.h  Placement.h  PlacementSurface.h  PointOfInterest.h  Surface.h
worldlib/src/geometry/: Pose.cpp
worldlib/src/model/: PersistenceModel.cpp  PlacementModel.cpp
worldlib/src/remote/: Client.cpp  HttpClient.cpp  InteractiveWorldModelClient.cpp  Node.cpp  SpatialWorldClient.cpp  SqlClient.cpp  SqlEntity.cpp
worldlib/src/world/: Item.cpp  Object.cpp  Observation.cpp  PointOfInterest.cpp  Room.cpp  Surface.cpp
