<package>
  <name>worldlib</name>
  <version>0.0.1</version>
  <description>C++ Library for World State Learning Methods</description>

  <author email="rctoris@wpi.edu">Russell Toris</author>
  <maintainer email="rctoris@wpi.edu">Russell Toris</maintainer>
  
  <url type="website">http://ros.org/wiki/worldlib</url>
  <url type="bugtracker">https://github.com/WPI-RAIL/spatial_temporal_learning/issues</url>
  <url type="repository">https://github.com/WPI-RAIL/spatial_temporal_learning</url>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>boost</build_depend>
  <build_depend>curl</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>libmysqlclient-dev</build_depend>
  <build_depend>libjsoncpp-dev</build_depend>
  <build_depend>pkg-config</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>yaml-cpp</build_depend>

  <run_depend>boost</run_depend>
  <run_depend>curl</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>libjsoncpp-dev</run_depend>
  <run_depend>libmysqlclient-dev</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>yaml-cpp</run_depend>
</package>
