 <package>
  <name>spatial_temporal_learning</name>
  <version>0.0.2</version>
  <description>Learning Methods Based on Spatial and Temporal Data</description>

  <maintainer email="rctoris@wpi.edu">Russell Toris</maintainer>
  <author email="rctoris@wpi.edu">Russell Toris</author>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/spatial_temporal_learning</url>
  <url type="bugtracker">https://github.com/WPI-RAIL/spatial_temporal_learning/issues</url>
  <url type="repository">https://github.com/WPI-RAIL/spatial_temporal_learning</url>
 
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>worldlib</run_depend>

  <export>
    <metapackage />
  </export>
</package>
