<package>
  <name>world_item_search</name>
  <version>0.0.2</version>
  <description>World Object Search via Persistence Models</description>

  <author email="rctoris@wpi.edu">Russell Toris</author>
  <maintainer email="rctoris@wpi.edu">Russell Toris</maintainer>
  
  <url type="website">http://ros.org/wiki/world_item_search</url>
  <url type="bugtracker">https://github.com/WPI-RAIL/spatial_temporal_learning/issues</url>
  <url type="repository">https://github.com/WPI-RAIL/spatial_temporal_learning</url>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>boost</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>worldlib</build_depend>

  <run_depend>boost</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>worldlib</run_depend>
</package>
