<package>
  <name>world_item_observer</name>
  <version>0.0.1</version>
  <description>Persistent Observer of Items in the World for the Spatial World Database</description>

  <author email="rctoris@wpi.edu">Russell Toris</author>
  <maintainer email="rctoris@wpi.edu">Russell Toris</maintainer>

  <url type="website">http://ros.org/wiki/world_item_search</url>
  <url type="bugtracker">https://github.com/WPI-RAIL/spatial_temporal_learning/issues</url>
  <url type="repository">https://github.com/WPI-RAIL/spatial_temporal_learning</url>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>graspdb</build_depend>
  <build_depend>rail_manipulation_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>worldlib</build_depend>

  <run_depend>graspdb</run_depend>
  <run_depend>rail_manipulation_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>worldlib</run_depend>
</package>
